--- a/templates/page/main.html
+++ b/templates/page/main.html
@@ -404,7 +404,7 @@
                                     lessons as new trends emerge in learner interests.
                                 </p>
                                 <div class="blockText__img">
-                                    <i class="fa fa-check-circle"></i>
+                                    <i class="fa fa-child"></i>
                                 </div>
                             </div>
                             <div class="blockText">
@@ -417,7 +417,7 @@
                                     content recap and enrichment activities.
                                 </p>
                                 <div class="blockText__img">
-                                    <i class="fa fa-check-circle"></i>
+                                    <i class="fa fa-trophy"></i>
                                 </div>
                             </div>
                             <div class="blockText textRight">
@@ -430,7 +430,7 @@
                                     All of them have prior experience working with children, and are pursuing careers in STEM. 
                                 </p>
                                 <div class="blockText__img">
-                                    <i class="fa fa-check-circle"></i>
+                                    <i class="fa fa-chalkboard-teacher"></i>
                                 </div>
                             </div>
                             <div class="blockText">
@@ -443,7 +443,7 @@
                                     buddies through My Friends Online, or book flexible private instruction.
                                 </p>
                                 <div class="blockText__img">
-                                    <i class="fa fa-check-circle"></i>
+                                    <i class="fa fa-calendar-check"></i>
                                 </div>
                             </div>
                         </div>
