--- a/templates/page/main.html
+++ b/templates/page/main.html
@@ -402,10 +402,6 @@
                                     Our project-based curriculum is developed inhouse by talented coders with extensive experience 
                                     instructing children ages 6-13. They know the nuances of engaging kids in each age group and roll out new 
                                     lessons as new trends emerge in learner interests.
-                                </p>
-                                <div class="blockText__img">
-                                    <i class="fa fa-child"></i>
-                                </div>
                             </div>
                             <div class="blockText">
                                 <h5 class="h5">
@@ -416,9 +412,6 @@
                                     digital badges as they go! Our online portal captures and maps learning progress, suggests next steps, and provides 
                                     content recap and enrichment activities.
                                 </p>
-                                <div class="blockText__img">
-                                    <i class="fa fa-trophy"></i>
-                                </div>
                             </div>
                             <div class="blockText textRight">
                                 <h5 class="h5">
@@ -429,9 +422,6 @@
                                     They promote a fun and social class environment and engage with every student in every class. 
                                     All of them have prior experience working with children, and are pursuing careers in STEM. 
                                 </p>
-                                <div class="blockText__img">
-                                    <i class="fa fa-chalkboard-teacher"></i>
-                                </div>
                             </div>
                             <div class="blockText">
                                 <h5 class="h5">
@@ -442,9 +432,6 @@
                                     their needs. You can choose from our robust calendar of scheduled classes, curate a class with your child’s 
                                     buddies through My Friends Online, or book flexible private instruction.
                                 </p>
-                                <div class="blockText__img">
-                                    <i class="fa fa-calendar-check"></i>
-                                </div>
                             </div>
                         </div>
                     </article>
@@ -452,11 +439,50 @@
             </div>
         </section>
 
-        <section>
+        <section>  
             <div class="container">
                 <div class="rows">
-                    <img class="size-medium  divider" src="/CA/uploads/divider-1-300x23-1.png" alt="divider" width="300" height="auto"/>
+                    <img class="size-medium aligncenter divider" src="/CA/uploads/divider-1-300x23-1.png" alt="divider" width="300" height="auto"/>
                 </div>
+                <div class="rows">
+                    <article>
+                        <h2 class="h2 textCenter">
+                            Some days, we have more than 100 online classes running. Before the world changed, 
+                            we were also running 100 in-person afterschool coding programs in NY, NJ, and DC!
+                        </h2>
+                        <p>
+                            Bringing together students from around the country and across the globe for our online coding classes is always exciting. We also have a strong history and reputation among the top elementary, middle, and high schools in New York, New Jersey, and D.C. where we have been running afterschool coding programs on-site for many years. We remain connected with all our schools and learning centers during this time. 
+                            <strong>
+                                If you are an Afterschool Program Director, please reach out through our contact form or learn more on our <a title="Afterschool Program Director" href="/contact/program-director">Afterschool Program Director</a> page!
+                            </strong>
+                        </p>
+                        <p>
+                            Our afterschool coding programs are award-winning and have been featured many times in the media. Here are a handful of our favorite press pieces.
+                        </p>
+                        <div class="pressBlock">
+                            <a href="https://www8.gsb.columbia.edu/articles/columbia-business/coding-classes-kids-mark-shift-educational-priorities" title="Writing the Code for Success" target="_blank">
+                                <img class="alignnone size-medium wp-image-2130" src="/CA/uploads/ColumbiaUniversity-1-150x300.png" alt="Columbia University" width="200" height="100" />
+                            </a>
+                            <a href="https://www.timeout.com/new-york-kids/things-to-do/codeadvantage" target="_blank" title="CodeAdvantage in Time Out">
+                                <img class="alignnone size-medium wp-image-2137" src="/CA/uploads/Times-Out-1-300x300.png" alt="Time Out New York" width="100" height="100" />
+                            </a>
+                            <a href="https://vimeo.com/237738680" title="CodeAdvantage Makes Coding Accessible for Kids" target="_blank">
+                                <img class="alignnone size-medium wp-image-2136" src="/CA/uploads/PBS-300x300.jpg" alt="Public Broadcasting Service" width="100" height="100" />
+                            </a>
+                            <a href="https://mommypoppins.com/new-york-city-kids/directory/virtual/codeadvantage" title="CodeAdvantage on MommyPoppins" target="_blank">
+                                <img class="alignnone size-medium wp-image-2133" src="/CA/uploads/Mommy-Poppins-300x300.jpg" alt="Mommy Poppins New Jersey" width="100" height="100"  />
+                            </a>
+                        </div>
+                    </article>
+                </div>
+                <div class="rows">
+                    <img class="size-medium aligncenter divider" src="/CA/uploads/divider-1-300x23-1.png" alt="divider" width="300" height="auto"/>
+                </div>
+            </div>
+        </section>
+
+        <section>
+            <div class="container">
                 <div class="rows">
                     <article>
                         <h2 class="h2">Learn About Our Online Coding Classes and Levels </h2>
