--- a/templates/page/main.html
+++ b/templates/page/main.html
@@ -439,6 +439,19 @@
             </div>
         </section>
 
+        <section>
+            <div class="container">
+                <div class="rows">
+                    <article>
+                        <h3 class="h3 textCenter mb-middle">
+                            Get to know a few of our Rockstar Coding Instructors!
+                        </h3>
+                        
+                    </article>
+                </div>
+            </div>
+        </section>
+
         <section>  
             <div class="container">
                 <div class="rows">
@@ -477,6 +490,89 @@
                 </div>
                 <div class="rows">
                     <img class="size-medium aligncenter divider" src="/CA/uploads/divider-1-300x23-1.png" alt="divider" width="300" height="auto"/>
+                </div>
+            </div>
+        </section>
+
+        <section>
+            <div class="container">
+                <div class="row">
+                    <article>
+                        <h2 class="h2 textCenter">
+                            Get to know a few of our Rockstar Coding Instructors!
+                        </h2>
+
+                        <div class="classesBlocks mb-middle">
+                            <div class="imgWithCaptionBlock">
+                                <img src="/CA/uploads/scratchjr-450x450.png" alt="Scratch Jr"/>
+                                <div class="imgWithCaptionBlock__title">
+                                    <h5 class="h5">Rhea</h5>
+                                    <p>Instructor</p>
+                                </div>
+                                <div>
+                                    <h5 class="h5">
+                                        “I’m excited to expose our future leaders to early ideas and initiatives within computer science.”
+                                    </h5>
+                                    <p><strong>Hometown: </strong>Los Angeles, CA</p>
+                                    <p><strong>School: </strong> NYU Tandon School of Engineering</p>
+                                    <p><strong>Major: </strong>Computer Science and Business & Tech Management</p>
+                                    <p><strong>Fun Fact: </strong>In high school Rhea fostered more than 10 pugs.</p>
+                                </div>
+                            </div>
+
+                            <div class="imgWithCaptionBlock">
+                                <img src="/CA/uploads/kodu-450-1.jpg" alt="3D Game Design"/>
+                                <div class="imgWithCaptionBlock__title">
+                                    <h5 class="h5">Annie</h5>
+                                    <p>Instructor</p>
+                                </div>
+                                <div>
+                                    <h5 class="h5">
+                                        “I’m excited to expose our future leaders to early ideas and initiatives within computer science.”
+                                    </h5>
+                                    <p><strong>Hometown: </strong>Los Angeles, CA</p>
+                                    <p><strong>School: </strong> NYU Tandon School of Engineering</p>
+                                    <p><strong>Major: </strong>Computer Science and Business & Tech Management</p>
+                                    <p><strong>Fun Fact: </strong>In high school Rhea fostered more than 10 pugs.</p>
+                                </div>
+                            </div>
+
+                            <div class="imgWithCaptionBlock">
+                                <img src="/CA/uploads/roblox01.png" alt="Roblox Build"/>
+                                <div class="imgWithCaptionBlock__title">
+                                    <h5 class="h5">Andy</h5>
+                                    <p>Instructor</p>
+                                </div>
+                                <div>
+                                    <h5 class="h5">
+                                        “I’m excited to expose our future leaders to early ideas and initiatives within computer science.”
+                                    </h5>
+                                    <p><strong>Hometown: </strong>Los Angeles, CA</p>
+                                    <p><strong>School: </strong> NYU Tandon School of Engineering</p>
+                                    <p><strong>Major: </strong>Computer Science and Business & Tech Management</p>
+                                    <p><strong>Fun Fact: </strong>In high school Rhea fostered more than 10 pugs.</p>
+                                </div>
+                            </div>
+    
+                            <div class="imgWithCaptionBlock">
+                                <img src="/CA/uploads/minecraft-450-1.jpg" alt="Minecraft Club"/>
+                                <div class="imgWithCaptionBlock__title">
+                                    <h5 class="h5">John</h5>
+                                    <p>Instructor</p>
+                                </div>
+                                <div>
+                                    <h5 class="h5">
+                                        “I’m excited to expose our future leaders to early ideas and initiatives within computer science.”
+                                    </h5>
+                                    <p><strong>Hometown: </strong>Los Angeles, CA</p>
+                                    <p><strong>School: </strong> NYU Tandon School of Engineering</p>
+                                    <p><strong>Major: </strong>Computer Science and Business & Tech Management</p>
+                                    <p><strong>Fun Fact: </strong>In high school Rhea fostered more than 10 pugs.</p>
+                                </div>
+                            </div>
+                        </div>  
+
+                    </article>
                 </div>
             </div>
         </section>
