--- a/templates/page/main.html
+++ b/templates/page/main.html
@@ -498,7 +498,7 @@
             <div class="container">
                 <div class="row">
                     <article>
-                        <h2 class="h2 textCenter">
+                        <h2 class="h2 textCenter mb-middle">
                             Get to know a few of our Rockstar Coding Instructors!
                         </h2>
 
@@ -509,7 +509,7 @@
                                     <h5 class="h5">Rhea</h5>
                                     <p>Instructor</p>
                                 </div>
-                                <div>
+                                <div class="bio">
                                     <h5 class="h5">
                                         “I’m excited to expose our future leaders to early ideas and initiatives within computer science.”
                                     </h5>
@@ -526,14 +526,14 @@
                                     <h5 class="h5">Annie</h5>
                                     <p>Instructor</p>
                                 </div>
-                                <div>
+                                <div class="bio">
                                     <h5 class="h5">
-                                        “I’m excited to expose our future leaders to early ideas and initiatives within computer science.”
+                                        “Coding opens so many doors and I love helping kids unlock their potential and creativity.”
                                     </h5>
-                                    <p><strong>Hometown: </strong>Los Angeles, CA</p>
-                                    <p><strong>School: </strong> NYU Tandon School of Engineering</p>
-                                    <p><strong>Major: </strong>Computer Science and Business & Tech Management</p>
-                                    <p><strong>Fun Fact: </strong>In high school Rhea fostered more than 10 pugs.</p>
+                                    <p><strong>Hometown: </strong>Lynnfield, MA</p>
+                                    <p><strong>School: </strong> NYU –</p>
+                                    <p><strong>Major: </strong>Computer Science and Music Theatre</p>
+                                    <p><strong>Fun Fact: </strong>Annie has a pet African grey parrot named Sebbie who talks and sings!</p>
                                 </div>
                             </div>
 
@@ -543,14 +543,14 @@
                                     <h5 class="h5">Andy</h5>
                                     <p>Instructor</p>
                                 </div>
-                                <div>
+                                <div class="bio">
                                     <h5 class="h5">
-                                        “I’m excited to expose our future leaders to early ideas and initiatives within computer science.”
+                                        “Teach, computer science, and music are my three passions.”
                                     </h5>
-                                    <p><strong>Hometown: </strong>Los Angeles, CA</p>
-                                    <p><strong>School: </strong> NYU Tandon School of Engineering</p>
-                                    <p><strong>Major: </strong>Computer Science and Business & Tech Management</p>
-                                    <p><strong>Fun Fact: </strong>In high school Rhea fostered more than 10 pugs.</p>
+                                    <p><strong>Hometown: </strong>Brooklyn, NY</p>
+                                    <p><strong>School: </strong> Macaulay Honors College at Hunter College</p>
+                                    <p><strong>Major: </strong> Computer Science</p>
+                                    <p><strong>Fun Fact: </strong>Andy taught himself to juggle.</p>
                                 </div>
                             </div>
     
@@ -560,14 +560,14 @@
                                     <h5 class="h5">John</h5>
                                     <p>Instructor</p>
                                 </div>
-                                <div>
+                                <div class="bio">
                                     <h5 class="h5">
-                                        “I’m excited to expose our future leaders to early ideas and initiatives within computer science.”
+                                        “I believe that programming is more than a cool skill; it is a powerful tool that helps with everyday problem-solving.”
                                     </h5>
-                                    <p><strong>Hometown: </strong>Los Angeles, CA</p>
-                                    <p><strong>School: </strong> NYU Tandon School of Engineering</p>
-                                    <p><strong>Major: </strong>Computer Science and Business & Tech Management</p>
-                                    <p><strong>Fun Fact: </strong>In high school Rhea fostered more than 10 pugs.</p>
+                                    <p><strong>Hometown: </strong>Yorktown Heights, NY</p>
+                                    <p><strong>School: </strong> Manhattan College</p>
+                                    <p><strong>Major: </strong>Computer Science</p>
+                                    <p><strong>Fun Fact: </strong>When John was younger, he thought that he would never work with the computers, though, after the first class he has been hooked!</p>
                                 </div>
                             </div>
                         </div>  
