--- a/css/main.css
+++ b/css/main.css
@@ -746,6 +746,15 @@ aside {
     max-width: 240px;
     margin: 0 auto;
   }
+  .imgWithCaptionBlock .bio {
+    margin-top: 15px;
+  }
+  .imgWithCaptionBlock .bio p {
+    padding: 0px 0px 5px 0px;
+  }
+  .imgWithCaptionBlock .bio .h5 {
+    margin-bottom: 10px;
+  }
 }
 
 .socLinksBlock {
