--- a/css/main.scss
+++ b/css/main.scss
@@ -746,6 +746,16 @@ aside {
     max-width: 240px;
     margin: 0 auto;
   }
+  .imgWithCaptionBlock .bio{
+    margin-top: 15px;
+
+    p{
+      padding: 0px 0px 5px 0px;
+    }
+    .h5{
+      margin-bottom: 10px;
+    }
+  }
 }
 
 .socLinksBlock {
