--- a/templates/page/main.html
+++ b/templates/page/main.html
@@ -371,7 +371,7 @@
                     </article>
                     <aside>
                         
-                        <img style="width: 100%; margin-bottom: 25px;" src="/CA/uploads/Charu-1-300x240.jpg"  alt="Charu">
+                        <!-- <img style="width: 100%; margin-bottom: 25px;" src="/CA/uploads/Charu-1-300x240.jpg"  alt="Charu"> -->
 
                         <div class="sideBanner">
                             <div class="sideBanner__up">
@@ -434,19 +434,6 @@
                                 </p>
                             </div>
                         </div>
-                    </article>
-                </div>
-            </div>
-        </section>
-
-        <section>
-            <div class="container">
-                <div class="rows">
-                    <article>
-                        <h3 class="h3 textCenter mb-middle">
-                            Get to know a few of our Rockstar Coding Instructors!
-                        </h3>
-                        
                     </article>
                 </div>
             </div>
