--- a/templates/page/main.html
+++ b/templates/page/main.html
@@ -489,7 +489,7 @@
                             Get to know a few of our Rockstar Coding Instructors!
                         </h2>
 
-                        <div class="classesBlocks mb-middle">
+                        <div class="instructorBlocks mb-middle">
                             <div class="imgWithCaptionBlock">
                                 <img src="/CA/uploads/scratchjr-450x450.png" alt="Scratch Jr"/>
                                 <div class="imgWithCaptionBlock__title">
