--- a/templates/page/main.html
+++ b/templates/page/main.html
@@ -483,13 +483,13 @@
                 <div class="rows">
                     <img class="size-medium aligncenter divider" src="/CA/uploads/divider-1-300x23-1.png" alt="divider" width="300" height="auto"/>
                 </div>
-                <div class="row">
+                <div class="rows">
                     <article>
                         <h2 class="h2 textCenter mb-middle">
                             Get to know a few of our Rockstar Coding Instructors!
                         </h2>
 
-                        <div class="instructorBlocks mb-middle">
+                        <div class="classesBlocks mb-middle">
                             <div class="imgWithCaptionBlock">
                                 <img src="/CA/uploads/scratchjr-450x450.png" alt="Scratch Jr"/>
                                 <div class="imgWithCaptionBlock__title">
