--- a/templates/page/main.html
+++ b/templates/page/main.html
@@ -723,6 +723,15 @@
         <section>
             <div class="container">
                 <div class="rows textCenter">
+                    <form action="" id="onlineEmail">
+                        <h4 class="h4">
+                            For news & special offers, subscribe to our mailing list!
+                        </h4>
+                        <input type="text" placeholder="email address" name="email" required>
+                        <input type="submit" class="btn" value="SUBSCRIBE" >
+                    </form>
+                </div>
+                <div class="rows textCenter">
                     <article>
                         <h2 class="h2">Follow us on:
                         </h2>
