--- a/templates/page/main.html
+++ b/templates/page/main.html
@@ -723,10 +723,10 @@
         <section>
             <div class="container">
                 <div class="rows textCenter">
-                    <form action="" id="onlineEmail">
-                        <h4 class="h4">
+                    <form class="mainForm" action="" id="onlineEmail">
+                        <h3 class="h3">
                             For news & special offers, subscribe to our mailing list!
-                        </h4>
+                        </h3>
                         <input type="text" placeholder="email address" name="email" required>
                         <input type="submit" class="btn" value="SUBSCRIBE" >
                     </form>
