--- a/css/main.css
+++ b/css/main.css
@@ -1191,5 +1191,6 @@ aside {
 .mainForm {
   width: 100%;
   text-align: center;
+  background-color: #4ccef0;
 }
 /*# sourceMappingURL=main.css.map */
