--- a/css/main.scss
+++ b/css/main.scss
@@ -1186,5 +1186,11 @@ aside {
 .mainForm{
   width: 100%;
   text-align: center;
-  background-color:  #4ccef0;
+  padding: 15px 20px;
+  margin: 0 auto;
+
+  input[name="email"]{
+    margin: 15px auto 15px;
+  }
+
 }
