--- a/css/main.css
+++ b/css/main.css
@@ -1197,5 +1197,9 @@ aside {
 
 .mainForm input[name="email"] {
   margin: 15px auto 15px;
+  border-radius: 5px 5px 0 0;
+  border-color: #E8E8E8;
+  border-width: 1px;
+  border-style: solid;
 }
 /*# sourceMappingURL=main.css.map */
