--- a/css/main.css
+++ b/css/main.css
@@ -1195,8 +1195,12 @@ aside {
   margin: 0 auto;
 }
 
-.mainForm input[name="email"] {
+.mainForm input {
+  max-width: 400px;
   margin: 15px auto 15px;
+}
+
+.mainForm input[name="email"] {
   border-radius: 5px 5px 0 0;
   border-color: #E8E8E8;
   border-width: 1px;
