--- a/css/main.scss
+++ b/css/main.scss
@@ -1191,7 +1191,7 @@ aside {
 
   input{
     max-width: 400px;
-    margin: 15px auto 15px;
+    margin: 15px auto 15px!important;
   }
 
   input[name="email"]{
