--- a/css/main.css
+++ b/css/main.css
@@ -1195,8 +1195,12 @@ aside {
   margin: 0 auto;
 }
 
+.mainForm .h3 {
+  margin-bottom: 15px;
+}
+
 .mainForm input {
-  max-width: 400px;
+  max-width: 450px;
   margin: 0 auto 10px !important;
 }
 
