--- a/css/main.scss
+++ b/css/main.scss
@@ -1189,8 +1189,12 @@ aside {
   padding: 15px 20px;
   margin: 0 auto;
 
+  .h3{
+    margin-bottom: 15px;;
+  }
+
   input{
-    max-width: 400px;
+    max-width: 450px;
     margin: 0 auto 10px!important;
   }
 
