--- a/templates/page/main.html
+++ b/templates/page/main.html
@@ -289,40 +289,15 @@
     </script>
 </div>
 <div class="theme-page">
-        <div  
-        class="pb-line pb-clear-fix" 
-        style="background-position:center;background-repeat:no-repeat;
-        background-image:url('/uploads/homepage.jpg');
-        background-size:cover;padding-top:40px;
-        padding-bottom:40px;">
-        <ul class="pb-layout pb-layout-66x33 pb-reset-list pb-clear-fix pb-main">
-            <li class="pb-layout-column-left"> 
-                <div class="pb-space-line"></div>
-                <div>
-                    <div class="pb-text"></div>
-                </div>
-            </li>
-            <li class="pb-layout-column-right"> 
-                <div class="pb-space-line"></div>
-                <div>
-                    <div class="pb-text">	
-                        <div class="pb-call-to-action pb-clear-fix pb-call-to-action-responsive" style="background-color: rgba(255, 255, 255, 0.6); padding-left:20px; padding-right:20px;">
-                            <div class="pb-call-to-action-box pb-clear-fix" style="text-align: center;">
-                                <h4 class="pb-call-to-action-box-first-line" style="color: #fe6500;">Coding &amp; Robotics for Kids</h4>
-                                <a style="color: #0066cc; text-decoration: none;" href="/school-programs" title="Afterschool classes">Afterschool</a>&nbsp;|&nbsp;
-                                <a style="color: #ff3333; text-decoration: none;" href="/online-coding-classes-for-kids" title="Online coding classes">Online</a>&nbsp;|&nbsp;
-                                <a style="color: #cc9933; text-decoration: none;" href="/private-classes" title="Private Classes">Private&nbsp;Classes</a>
-                                <div>
-                                    <a class="pb-window-target-self" href="/online-coding-classes-for-kids">BROWSE CLASSES<i class="pb-button-arrow pb-button-arrow-right"></i></a>
-                                </div>
-                            </div>
-                        </div>
-            
-                            </div>
-                        </div>
-                    </li>
-                </ul>
+    <section id="onlinePageHeader" class="sectionheader mainPage">
+        <div class="container">
+            <div class="rows">
+                <article>
+                    <h1 class="h1">Me and <br> My Friends</h1>
+                </article>
             </div>
+        </div>
+    </section>
         <section>
             <div class="headerUnderline">
                 <p>
