--- a/css/main.css
+++ b/css/main.css
@@ -1164,6 +1164,18 @@ aside {
   padding: 100px 0;
   background-image: url("/uploads/Contacts.jpg");
 }
+.mainPage {
+  background-position: 50% 35%;
+  background-size: cover;
+  padding: 100px 0;
+  background-image: url("/CA/uploads/main-header.png");
+  height: 400px !important;
+}
+
+.mainPage .h1 {
+  margin-top: 170px;
+}
+
 
 .faqPage .h1 {
   margin-top: 170px;
